# sqlite3

./: .gitignore  CMakeLists.txt  license  readme.md
include/: sqlite3.h
src/: sqlite3.rc  sqlite3secure.c  sqlite3shell.rc
